--- a/faq/network-n-servers/server_ampere.html
+++ b/faq/network-n-servers/server_ampere.html
@@ -22,6 +22,10 @@ Later add to template-->
     Aiken and Tesla) without sudo access.
   </p>
   
+  <div class="alert alert-warning mb-4" role="alert">
+      <strong>Note:</strong> For general questions about connecting, access, software installation, and troubleshooting, please see the <a href="/network-n-servers/general-questions/" class="alert-link">General Questions</a> page.
+  </div>
+
   <div>
     <u>Specifications</u>
     <ul>
@@ -35,41 +39,12 @@ Later add to template-->
   
   <hr>
 
-  <!-- 1 -->
-  {% include qa-template.html
-  id="1"
-  question="How to connect to this server?"
-  answer="The methodology is very similar to how we would connect to kepler.ce.pdn.ac.lk or turing.ce.pdn.ac.lk.
-
-  The only difference is ampere.ce.pdn.ac.lk in place of kepler.ce.pdn.ac.lk.
-  Basic ssh connection instructions are <a href = 'https://faq.ce.pdn.ac.lk/network-n-servers/kepler/'>here</a> Jupyter notebook, mobaxtrem, and VScode connection information are <a href = 'https://www.cs.umd.edu/~gihan/resources/pdn-hpc/'>here</a>."
-  %}
-  
-  
   <!-- 2 -->
   {% include qa-template.html
   id="2"
   question="What is the IP address of this server?"
   answer="This server uses the internal IP address 10.40.18.10. This address is only valid within the Peradeniya network."
   %}
-  
-  <!-- 3 -->
-  {% include qa-template.html
-  id="3"
-  question="How can I get access to this server?"
-  answer="If you are an undergraduate student of the department,
-   you already have access to this server. If not, follow the instructions on <a href = 'https://faq.ce.pdn.ac.lk/network-n-servers/tesla/'>this</a> web page."
-  %}
-  
-  <!-- 4 -->
-  <!--
-  {% include qa-template.html
-  id="4"
-  question="What are the specifications of this server?"
-  answer="2* <a href = 'https://ark.intel.com/content/www/us/en/ark/products/199349/intel-xeon-silver-4215r-processor-11m-cache-3-20-ghz.html'>Intel Xeon 4215R</a> Processors, 
-  128 GB RAM, 2 * <a href = 'https://www.nvidia.com/en-us/design-visualization/rtx-a6000/'> RTX A6000</a> 48GB GPUs, 
-  HP Z Turbo Quad Pro 512GB SSD, 2 * 4TB Sata HDD." %}
-  -->
   
   <!-- 5 -->
   {% include qa-template.html
@@ -107,24 +82,5 @@ Later add to template-->
   `ls /storage/datasets`
   to see the preloaded datasets. 
   If you want us to store another dataset, make a request on #ask-for-help discord channel."
-  %}
-  
-  
-  <!-- 8 -->
-  {% include qa-template.html
-  id="8"
-  question="How to install software on this server?"
-  answer="First, try to install it using the conda package manager. <a href = 'https://www.cs.umd.edu/~gihan/resources/pdn-hpc/'>Read more</a>.<br>
-  Then, try singularity [We have to install this]. <a href = 'https://faq.ce.pdn.ac.lk/network-n-servers/turing/'>Read more</a> (the methodology is similar to Turing)<br>
-  Finally, ask on #ask-for-help on Discord.
-  "
-  %}
-  
-  <!-- 9 -->
-  {% include qa-template.html
-  id="9"
-  question="My question is not listed here. What should I do?"
-  answer="Post your question on #ask-for-help channel on peracom discord. 
-  If you are not on the discord server, reach out to <a href = 'https://people.ce.pdn.ac.lk/students/e17/154/'>E/17/Akila</a> via email."
   %}
   
