--- a/faq/network-n-servers/server_kepler.html
+++ b/faq/network-n-servers/server_kepler.html
@@ -22,14 +22,9 @@ Later add to template-->
   aiken and tesla) without sudo access.
 </p>
 
-<!-- 2 -->
-{% include qa-template.html
-id="2"
-question="How can I connect to this server?"
-answer="You can use ssh login. Since kepler.ce.pdn.ac.lk is not a public IP you should either
-- use a computer in the Peradeniya network or
-- ssh to a public IP server like tesla.ce.pdn.ac.lk or aiken.ce.pdn.ac.lk and ssh to kepler.ce.pdn.ac.lk from there."
-%}
+<div class="alert alert-warning mb-4" role="alert">
+    <strong>Note:</strong> For general questions about connecting, access, software installation, and troubleshooting, please see the <a href="/network-n-servers/general-questions/" class="alert-link">General Questions</a> page.
+</div>
 
 <!-- 4 -->
 {% include qa-template.html
