--- a/faq/network-n-servers/server_turing.html
+++ b/faq/network-n-servers/server_turing.html
@@ -22,6 +22,10 @@ Later add to template-->
   Aiken and Tesla) without sudo access.
 </p>
 
+<div class="alert alert-warning mb-4" role="alert">
+    <strong>Note:</strong> For general questions about connecting, access, software installation, and troubleshooting, please see the <a href="/network-n-servers/general-questions/" class="alert-link">General Questions</a> page.
+</div>
+
 <div>
   <u>Specifications</u>
   <ul>
@@ -34,16 +38,6 @@ Later add to template-->
 
 
 <hr>
-
-
-<!-- 2 -->
-{% include qa-template.html
-id="2"
-question="How can I connect to this server?"
-answer="You can use SSH login. Since turing.ce.pdn.ac.lk is not a public IP you shoud either (a) use a computer in the
-Peradeniya network or (b) SSH to a public IP server like tesla.ce.pdn.ac.lk or aiken.ce.pdn.ac.lk and SSH to
-turing.ce.pdn.ac.lk from there."
-%}
 
 
 <!-- 4 -->
@@ -88,66 +82,6 @@ output the results to your home directory. The following datasets are stored at 
 
 If you have suggestions for what datasets should be made available on this server, please send a request via
 email available in [https://www.cs.umd.edu/~gihan/contact/](https://www.cs.umd.edu/~gihan/contact/) address." %}
-
-
-
-<!-- 9 -->
-{% include qa-template.html
-id="9"
-question="I want a different version of NVCC?"
-answer="Use https://anaconda.org/anaconda/cudatoolkit"
-%}
-
-
-<!-- 11 -->
-{% include qa-template.html
-id="11"
-question="Can I install some software here?"
-answer="Please request through any CO staff member. Please note that the server admin has no authority to install
-something
-unless it is requested by a staff memeber."
-%}
-
-
-<!-- 12 -->
-{% include qa-template.html
-id="12"
-question="What can I do if my doubt is not listed here?"
-answer="[Ask via email](/network-n-servers/contact-network-admin/)"
-%}
-
-<!-- 13 -->
-{% include qa-template.html
-id="13"
-question="I am not an undergraduate of the Department of Computer Engineering, University of Peradeniya. Can I use this
-server?"
-answer="Ask headce[at]eng.pdn.ac.lk."
-%}
-
-<!-- 14 -->
-{% include qa-template.html
-id="14"
-question="I broke something. What should I do?"
-answer="[Contact server admin](/network-n-servers/contact-network-admin/)</a>"
-%}
-
-<!-- 15 -->
-{% include qa-template.html
-id="14"
-question="How to run a Singularity container on Turing?"
-answer="
-<ol>
-  <li>Send a request to the server admin via the <a
-      href='https://faq.ce.pdn.ac.lk/network-n-servers/contact-network-admin/'>server admin contact page</a> to run this
-    command: <code class='bash'>sudo singularity config fakeroot --add eXXYYY</code></li>
-  <li>Download the sample def file: <code
-      class='bash'>eyyxxx@turing:~$ wget https://raw.githubusercontent.com/cepdnaclk/singularity-deployment/main/base.def</code>
-  </li>
-  <li>Build the container: <code class='bash'>eyyxxx@turing:~$ singularity build --fakeroot base.sif base.def</code>
-  </li>
-  <li>Run commands using the container: <code
-      class='bash'>eyyxxx@turing:~$ singularity exec base.sif &lt;your-command&gt;</code></li>
-</ol>
 <p>If you need to learn more, go to: <a
     href='https://github.com/cepdnaclk/singularity-deployment'>https://github.com/cepdnaclk/singularity-deployment</a>
 </p>"
