--- a/faq/network-n-servers/server_turing.html
+++ b/faq/network-n-servers/server_turing.html
@@ -64,6 +64,14 @@ author: Nuwan
 </faq>
 
 <faq>
+  <question>How to use the scratch space in Turing?</question>
+  <answer>
+    Read <a href="https://docs.google.com/document/d/10klpmbD2MGZxQJE2o80Kef8MSF78qG1JALXSSKSyYNM/edit?usp=sharing">this google doc</a>.
+  </answer>
+</faq>
+
+
+<faq>
   <question>What datasets are hosted in Turing?</question>
   <answer>
     <p>
