Update neumann docs

--- a/faq/network-n-servers/index.html
+++ b/faq/network-n-servers/index.html
@@ -59,7 +59,7 @@ toc: false
     </li>
     <li>
       <a href="./neumann">Neumann</a>
-      <span class="badge bg-info">Coming Soon</span>
+      (HPC Server)
     </li>
   </ul>
 </div>
