--- a/faq/network-n-servers/server_neumann.html
+++ b/faq/network-n-servers/server_neumann.html
@@ -7,7 +7,11 @@ index: 8
 author: Gihan
 ---
 
-<p>This is a GPU server of the Department of Computer Engineering, University of Peradeniya.</p>
+<p>This is a HPC server of the Department of Computer Engineering, University of Peradeniya.</p>
+
+<p>
+  This server can be used to run <strong>VLSI workflows using Synopsys tools</strong>.
+</p>
 
 <p>
   You can use this server using the LDAP login for ce.pdn.ac.lk undergraduates (which is used for CO top floor lab, Aiken and Tesla) without
@@ -59,7 +63,7 @@ author: Gihan
 
 <faq>
   <question>What is the operating system of this server?</question>
-  <answer>AlmaLinux (binary-compatible with Red Hat Enterprise Linux (RHEL))</answer>
+  <answer>AlmaLinux 10.1 (Heliotrope Lion) x86_64 (binary-compatible with Red Hat Enterprise Linux (RHEL))</answer>
 </faq>
 
 <faq>
